[package]
name = "fable-raytracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "fable_raytracer"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "fable_raytracer"
path = "src/main.rs"

[dependencies]
fable_library_rust = { path = "./fable_modules/fable-library-rust" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
lto = true
